stable component hashes

--- a/spec/server.html
+++ b/spec/server.html
@@ -18,6 +18,10 @@
       <label>5</label>
       <button>Click</button>
     </section>
+    <!--
+      Component ID = stable component ID, based on ast. You can change var and const names, and the hash will be the same.
+      Hash can be used for caching!
+    -->
     <script type="juno/data">
       {
         "1": { component: "_az4e", state: [23] },
