--- a/spec/server.html
+++ b/spec/server.html
@@ -29,10 +29,12 @@
       }
     </script>
     <script>
+      import { signal as createSignal } from "@maverickjs/signals";
+
       const DATA = JSON.parse(document.querySelector('script[type="juno/data"]').textContent);
 
       function getInstances() {
-        const markers = document.querySelectorAll('script[type="juno/component"]').map((marker) => {
+        const markers = document.querySelectorAll('script[type="juno/component"]').map(marker => {
           const id = marker.getAttribute("juno-id");
           const { component, state } = DATA[id];
           const root = marker.nextElementSibling;
@@ -46,7 +48,7 @@
           id,
           ssrValue: undefined,
           get: () => {
-            signal = createSignal;
+            signal = createSignal(lazySignal.ssrValue);
             lazySignal.get;
           },
         };
@@ -56,7 +58,7 @@
 
       getInstances().forEach(([component, state, root]) => initWithState(component, state, root));
 
-      const Counter = (props) => {
+      const Counter = props => {
         const count = createLazySingal(0);
         const increment = () => count.set(count.get() + 1);
         return [{ children: [count] }, { onClick: increment }];
