--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <title>juno</title>
   </head>
   <body>
-    <h1>Hello juno</h1>
+    <h1>hello juno</h1>
 
-    <script type="juno/component" juno-id="1"></script>
+    <script type="juno/instance" juno-id="1"></script>
     <section>
       <label>23</label>
       <button>Click</button>
     </section>
 
-    <script type="juno/component" juno-id="2"></script>
+    <script type="juno/instance" juno-id="2"></script>
     <section>
       <label>5</label>
       <button>Click</button>
