--- a/spec/server.html
+++ b/spec/server.html
@@ -34,7 +34,7 @@
       const DATA = JSON.parse(document.querySelector('script[type="juno/data"]').textContent);
 
       function getInstances() {
-        const markers = document.querySelectorAll('script[type="juno/component"]').map(marker => {
+        const markers = document.querySelectorAll('script[type="juno/component"]').map((marker) => {
           const id = marker.getAttribute("juno-id");
           const { component, state } = DATA[id];
           const root = marker.nextElementSibling;
@@ -58,7 +58,7 @@
 
       getInstances().forEach(([component, state, root]) => initWithState(component, state, root));
 
-      const Counter = props => {
+      const Counter = (props) => {
         const count = createLazySingal(0);
         const increment = () => count.set(count.get() + 1);
         return [{ children: [count] }, { onClick: increment }];
