--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <script type="juno/instance" juno-id="1"></script>
     <section>
       <button>Click</button>
-      <label>23</label>
+      <label>Count: 23, yes 23!</label>
     </section>
 
     <script type="juno/instance" juno-id="2"></script>
     <section>
       <button>Click</button>
-      <label>5</label>
+      <label>Count: 5, yes 5!</label>
     </section>
 
     <script type="juno/data">
       {
-        "1": { "component": "_az4e", "state": [5] },
-        "2": { "component": "_az4e", "state": [23] }
+        "1": { "component": "_az4e", "state": [23] },
+        "2": { "component": "_az4e", "state": [5] }
       }
     </script>
 
