--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     </section>
 
     <script type="juno/data">
-      {
-        "1": { "component": "_az4e", "state": [23] },
-        "2": { "component": "_az4e", "state": [5] }
-      }
+      [
+        { "id": 1, "component": "_az4e", "state": [23] },
+        { "id": 2, "component": "_az4e", "state": [5] }
+      ]
     </script>
 
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/hydrate.ts"></script>
   </body>
 </html>
