implemented demo.ts

--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
       ]
     </script>
 
-    <script type="module" src="/src/hydrate.ts"></script>
+    <script type="module" src="/src/demo.ts"></script>
   </body>
 </html>
